--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <html>
-    <head>
-        <script src="app.js" defer></script>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-
-    <body>
-        <main>
-            <h1>Acme Employees Dom</h1>
-            <ul></ul>
-        </main>
-    </body>
+  <head>
+    <script src='app.js' defer></script>
+    <link rel='stylesheet' href='styles.css' />
+  </head>
+  <body>
+    <h1>Acme Employees</h1>
+    <ul id='employees'>
+    </ul>
+  </body>
 </html>
